Fixes search result vertical cut off (fix opendatalu/gouvlu#63)

--- a/less/udata/search.less
+++ b/less/udata/search.less
@@ -61,7 +61,7 @@ ul.search-results {
 
             .result-title {
                 margin: 0 0 5px;
-                line-height: 15px;
+                line-height: 17px;
                 font-size: 14px;
                 color: #494949;
                 font-weight: bold;
